--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "HamburgerHorn",
-  "version_number": "1.0.0",
+  "name": "ClownHornCheeseburger",
+  "version_number": "1.0.1",
   "website_url": "https://github.com/noicephatboi/HamburgerHorn",
   "description": "Changes the clown horn with hamburger",
   "dependencies": [
